--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/project-management
+spring.datasource.username=postgres
+spring.datasource.password=admin
 
+spring.jpa.show-sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.jpa.defer-datasource-initialization=true
+server.port=8081
