--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=true
 server.port=8081
